--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -20,7 +20,9 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: checkout
-        uses: actions/checkout@v4        
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}              
 
       - name: update action.yml to build locally
         run: |
@@ -62,7 +64,7 @@ jobs:
           ls -l mmd/
 
   build-package:
-    if: startsWith(github.event.pull_request.head.ref || github.head_ref, 'refs/heads/release/v')
+    if: startsWith(github.event.pull_request.head.ref || github.head_ref, 'release/v')
     needs: [test]
     name: build-package
     runs-on: ubuntu-latest
@@ -72,6 +74,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.head_ref }}
 
       - name: start deployment
         uses: bobheadxi/deployments@v1
