--- a/.github/workflows/release-pr-merged.yml
+++ b/.github/workflows/release-pr-merged.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   if_merged:
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref || github.head_ref , 'release/v')
+    name: create tag
     runs-on: ubuntu-latest
     steps:    
       - uses: wow-actions/use-app-token@v2
@@ -19,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ env.BOT_TOKEN }}          
+          token: ${{ env.BOT_TOKEN }}
 
       - id: release
         name: get version
