--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -16,13 +16,12 @@ permissions:
 
 jobs:
   test:
+    name: Test Release PR
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: checkout
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}              
 
       - name: update action.yml to build locally
         run: |
@@ -63,10 +62,10 @@ jobs:
       - run: |
           ls -l mmd/
 
-  build-package:
+  build-docker:
     if: startsWith(github.event.pull_request.head.ref || github.head_ref, 'release/v')
     needs: [test]
-    name: build-package
+    name: Build Docker
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
