--- a/.github/workflows/on-push-tag.yaml
+++ b/.github/workflows/on-push-tag.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4  
         with:
           fetch-depth: 0
-          fetch-tags: true
+          ref: ${{ github.ref }}
 
       - name: build package
         uses: elgohr/Publish-Docker-Github-Action@v5
@@ -35,6 +35,7 @@ jobs:
           tag_names: true
  
   github-release:
+    if: startsWith(github.ref_name, 'v1.')
     name: github release for tag
     needs: [build-docker]
     runs-on: ubuntu-latest
@@ -44,6 +45,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
 
       - name: create release
         env:          
@@ -53,6 +55,7 @@ jobs:
           gh release create "${{ github.ref_name }}" --title "${{ github.ref_name }}" --notes "${NOTES}"
           
   move-tags:
+    if: startsWith(github.ref_name, 'v1.')
     name: move tags
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -61,12 +64,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
 
       - name: parse semver
         id: semver_parser 
         uses: booxmedialtd/ws-action-parse-semver@v1
         with:
-          input_string: ${{ github.ref_name }}
+          input_string: ${{ github.ref }}
           version_extractor_regex: '\/v(.*)$' 
 
       - name: move tags
