--- a/action.yml
+++ b/action.yml
@@ -27,7 +27,7 @@ inputs:
 
 runs:
   using: docker
-  image: docker://ghcr.io/likec4/actions:v1.49.0
+  image: docker://ghcr.io/likec4/actions:V1.49.1v1.0.0
 
 branding:
   icon: image
