--- a/action.yml
+++ b/action.yml
@@ -24,8 +24,8 @@ inputs:
   likec4-version:
     description: 'likec4 version to use (default: bundled with action)'
     required: false
-  use-dot-binary:
-    description: 'If true, layouter will use the binary version of graphviz'
+  use-dot-bin:
+    description: 'if true will use dot binary of graphviz'
     default: 'false'
     required: false
 
